--- a/style.css
+++ b/style.css
@@ -4,8 +4,10 @@ body {
 }
 h1 {
 		font-family: 'Pacifico', cursive;
+		font-size: 50px;
 	}
 p {
 	font-family: 'Vollkorn SC', serif;
 	color: white;
+	font-size: 30px;
 }
